src/MudBlazor/Styles/layout/_drawer.scss
@import '../abstracts/variables';

.mud-drawer {
    display: flex;
    flex-shrink: 0;
    flex-grow: 1;
    flex: 0 0 auto;
    outline: 0;
    position: fixed;
    z-index: calc(var(--mud-zindex-drawer) + 1);
    overflow-y: auto;
    flex-direction: column;
    color: var(--mud-palette-drawer-text);
    background-color: var(--mud-palette-drawer-background);
    --mud-drawer-content-height: 0;

    .mud-drawer-content {
        max-height: 100%;
        display: flex;
        flex-shrink: 0;
        flex-grow: 1;
        flex: 0 0 auto;
        flex-direction: column;
    }

    &:not(.mud-drawer-fixed) {
        position: absolute;
    }

    @each $breakpoint in map-keys($breakpoints-max) {
        &.mud-drawer-responsive.mud-drawer-#{$breakpoint} {
            @media (max-width: map-get($breakpoints-max, $breakpoint)) {
                z-index: calc(var(--mud-zindex-dialog) + 1);
            }
        }
    }

    &.mud-drawer-responsive, &.mud-drawer-persistent {
        height: 100%;
        width: var(--mud-drawer-width);

        &.mud-drawer-anchor-left {
            right: auto;

            &.mud-drawer--open {
                left: 0;

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-in-left 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }

            &.mud-drawer--closed {
                left: calc(-1 * var(--mud-drawer-width));

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-out-left 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }
        }

        &.mud-drawer-anchor-right {
            left: auto;

            &.mud-drawer--open {
                right: 0;

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-in-right 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }

            &.mud-drawer--closed {
                right: calc(-1 * var(--mud-drawer-width));

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-out-right 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }
        }
    }

    &.mud-drawer-temporary {
        margin: 0 !important;
        z-index: calc(var(--mud-zindex-dialog) + 1);
        transition: transform 225ms cubic-bezier(0, 0, 0.2, 1) 0ms;

        &.mud-drawer-anchor-left {
            right: auto;
            top: 0;
            height: 100%;
            width: var(--mud-drawer-width);

            &.mud-drawer--open {
                left: 0;

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-in-left 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }

            &.mud-drawer--closed {
                left: calc(-1 * var(--mud-drawer-width));

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-out-left 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }
        }

        &.mud-drawer-anchor-right {
            left: auto;
            top: 0;
            height: 100%;
            width: var(--mud-drawer-width);

            &.mud-drawer--open {
                right: 0;

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-in-right 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }

            &.mud-drawer--closed {
                right: calc(-1 * var(--mud-drawer-width));

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-out-right 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }
        }

        &.mud-drawer-anchor-bottom {
            left: 0;
            top: auto;
            width: 100%;

            &.mud-drawer--open {
                bottom: 0;

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-in-bottom 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }

            &.mud-drawer--closed {
                bottom: calc(-1 * var(--mud-drawer-content-height));

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-out-bottom 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }
        }

        &.mud-drawer-anchor-top {
            left: 0;
            bottom: auto;
            width: 100%;

            &.mud-drawer--open {
                top: 0;

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-in-top 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }

            &.mud-drawer--closed {
                top: calc(-1 * var(--mud-drawer-content-height));

                &:not(.mud-drawer--initial) {
                    animation: mud-drawer-slide-out-top 225ms cubic-bezier(0, 0, 0.2, 1) 0ms 1;
                }
            }
        }
    }

    &.mud-drawer-persistent.mud-drawer-anchor-left ~ div:not(.mud-main-content) {
        transition: margin 225ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
    }

    &.mud-drawer-persistent.mud-drawer-anchor-left.mud-drawer--open ~ div:not(.mud-main-content) {
        margin-left: var(--mud-drawer-width);
    }

    &.mud-drawer-persistent.mud-drawer-anchor-right.mud-drawer--open ~ div:not(.mud-main-content) {
        margin-right: var(--mud-drawer-width);
    }
}

.mud-drawer-header {
    display: flex;
    min-height: var(--mud-appbar-min-height);
    padding: 12px 24px 12px 24px;

    &.mud-drawer-header-dense {
        min-height: calc(var(--mud-appbar-min-height) - 16px);
        padding: 8px 24px 8px 24px;
    }
}

.mud-drawer-fixed {
    &.mud-drawer-persistent:not(.mud-drawer-clipped-never),
    &.mud-drawer-responsive.mud-drawer-clipped-always,
    &.mud-drawer-temporary.mud-drawer-clipped-always {
        top: var(--mud-appbar-min-height);
    }

    @each $breakpoint in map-keys($breakpoints-max) {
        &.mud-drawer-responsive.mud-drawer-clipped-docked.mud-drawer-#{$breakpoint} {
            @media (min-width: map-get($breakpoints-min, $breakpoint)) {
                top: var(--mud-appbar-min-height);
            }
        }
    }
}

.mud-drawer-overlay {
    display: none;

    &.mud-drawer-overlay--open {
        @each $breakpoint in map-keys($breakpoints-max) {
            &.mud-drawer-overlay-responsive.mud-drawer-overlay-#{$breakpoint} {
                @media (max-width: map-get($breakpoints-max, $breakpoint)) {
                    display: block;

                    &.mud-drawer--initial {
                        display: none;
                    }
                }
            }
        }

        &.mud-drawer-overlay-temporary {
            display: block;
        }
    }
}

/*#region keyframes*/
@keyframes mud-drawer-slide-in-left {
    from {
        left: calc(-1 * var(--mud-drawer-width));
    }
}

@keyframes mud-drawer-slide-out-left {
    from {
        left: 0;
    }
}

@keyframes mud-drawer-slide-in-right {
    from {
        right: calc(-1 * var(--mud-drawer-width));
    }
}

@keyframes mud-drawer-slide-out-right {
    from {
        right: 0;
    }
}

@keyframes mud-drawer-slide-in-bottom {
    from {
        bottom: calc(-1 * var(--mud-drawer-content-height));
    }
}

@keyframes mud-drawer-slide-out-bottom {
    from {
        bottom: 0;
    }
}

@keyframes mud-drawer-slide-in-top {
    from {
        top: calc(-1 * var(--mud-drawer-content-height));
    }
}

@keyframes mud-drawer-slide-out-top {
    from {
        top: 0;
    }
}
/*#endregion*/

